# tutorials

./: .gitignore  aaa.tar.xz  app.js  git_fix_user.sh  index.html
GraphQL_course/: notes.md
go-notes/: go - Chapter  2  Primitive Types and Declarations.odt  go - Chapter  3  Composite Types.odt
javascript_crash_course/: controller.js  gamestyles.css  javascript_1.html  javascript_10.html  javascript_2.html  javascript_3.html  javascript_4.html  javascript_5.html  javascript_6.html  javascript_7.html  javascript_8.html  javascript_9.html  lab.js
learn_go_with_tests/: AGENT.md  AGENTS.md  SPEC.md  go.mod  go_cli_commands.md  notes.md
object_oriented_php_for_beginners/: __call_and__callStatic.php  __isset_and__unset.php  my_print_functions.php  part1- classes_properties_methods_assignment_and_cloneing.php  part1_ classes_properties_methods_assignment_and_cloneing.php  part2_constractors_and_destroctions.php  part3_static_properties_and_methods.php  part4_constants.php  part6_inheritance.php  part6_inheritance2.php  part7_abstract_class.php  part8_interface.php  part8_interface2.php  part9_traits.php  part9_traits2.php  part9_traits3.php  test.php  (+1 more)
udemy_courses/AI_Coder_Complete_Claude_Code_And_Coding_Agents_Course/week_1_day_5/pm/backend/: AGENTS.md  auth.py  database.py  main.py  pyproject.toml
udemy_courses/AI_Coder_Complete_Claude_Code_And_Coding_Agents_Course/week_1_day_5/pm/backend/static/: index.html
udemy_courses/AI_Coder_Complete_Claude_Code_And_Coding_Agents_Course/week_1_day_5/pm/backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py
(+6890 files in other folders)
